# collosium-mono

./: .env  .env.example  .gitignore  .test  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yaml  docker-compose.yml  geyser-config.json  go.mod  go.sum  main.go  package-lock.json  package.json  parse-car.go  schema.gql  tailwind.config.ts  test.txt
app/: layout.tsx  page.tsx  provider.tsx  providers.tsx
app/create-index/: page.tsx
app/liquidations/[id]/: page.tsx
app/my-indices/: page.tsx
app/my-indices/[id]/: page.tsx
astralane-carparser/: go.mod
astralane-carparser/sources-7HTvbzJPqK/: parse-car.go
astralane-gayser-plugin/: geyser-config.json
astralane-gayser-plugin/server/: example-config.json
astralane-index-graphql-server/: .env.example
astralane-index-worker/protos-out/: confirmed_block.pb.go  geyser.pb.go
astralane-price-parser/ts/: .env.example  index.ts  package.json
astralane-protos/: geyser.proto
astralane-streaming-client/: .npmignore  package-lock.json  tsconfig.json
astralane-streaming-client/src/: index.ts
astralane-streaming-fe/: package.json
astralane-streaming-fe/app/: globals.css  page.tsx
astralane-streaming-fe/hooks/: useCreateIndex.ts  useFetchBackfill.ts
astralane-streaming-fe/utils/: common.ts
astralen-jito-solana/: README.md
block_engine/src/: block_engine.rs
component/: AppNavbar.tsx  IndexTable.tsx
component/IndexBuilder/: BuilderCard.tsx
component/IndexFilters/: FilterItem.tsx  FiltersGroup.tsx
components/: AppNavbar.tsx  IndexTable.tsx  ItemCard.tsx  LiquidationTable.tsx  Liquidations.tsx  MainTab.tsx  Navbar.tsx  NumberBadge.tsx  SandwichTable.tsx  Sandwiches.tsx  SummaryCard.tsx  SwapItem.tsx
components/IDLBuilder/: IDLBuilder.tsx  Instruction.tsx
components/IndexBuilder/: BuilderCard.tsx
components/IndexFilters/: FilterItem.tsx
components/common/: CardItem.tsx
components/sandbox/: GraphQlSandbox.tsx
constants/: common.ts  queryKeys.ts
examples/callback-transaction/: index.ts  package-lock.json  package.json  utils.ts
examples/frontrunning/: index.ts  package.json
examples/logging/: index.ts  package-lock.json  package.json
examples/rate-limiting/: package.json  utils.ts
hooks/: useCreateIndex.ts  useFetchIdl.tsx  useFetchLiquidationCounts.ts  useFetchMyIndexes.ts
indexing/astralane-carparser/: go.sum  main.go
indexing/astralane-gayser-plugin/: .gitmodules  Cargo.toml
indexing/astralane-index-graphql-server/: Dockerfile  README.md  package-lock.json  package.json  schema.gql  test.txt
indexing/astralane-index-worker/: .gitmodules  Makefile  go.mod  go.sum  main.go
indexing/astralane-protos/: bundle_exchange.proto
indexing/astralane-streaming-client/: README.md  bundles.patch
indexing/astralane-streaming-server/: .env.example
indexing/mev-indexer-be/: package-lock.json  pnpm-lock.yaml
indexing/substream-client/: Cargo.toml  README.md
indexing/substream-client/mev-sink/: Cargo.toml  start.sh
indexing/substream-client/mev-sink/src/: db_types.rs
indexing/substream-client/mev-sink/src/pb/: sf.solana.dex.sandwiches.v1.rs  sf.solana.transfer.v1.rs  sol.block.v1.rs
indexing/substream-client/mev-sink/src/tables/: sandwich.sql
indexing/substream-client/substreams-rs/: Cargo.toml  README.md
indexing/substream-client/substreams-rs/src/: lib.rs  utils.rs
indexing/substream-client/substreams-rs/src/pb/: sf.substreams.rpc.v2.tonic.rs
jito-protos/: Cargo.toml
jito-protos/protos/: relayer.proto  streaming_service.proto
mev-indexer-ui/: .gitignore  package.json
mev-indexer-ui/app/: layout.tsx  page.tsx
mev-indexer-ui/hooks/: useFetchLiquidationById.ts
mev-indexer-ui/types/: parsedType.ts
mev-sink/: README.md  start.sh
mev-sink/src/: clickhouse_client.rs  main.rs  substream_client.rs
pkg/database/: database.go
pkg/index_config/: index_cfg.go  index_cfg_sync.go  index_cfg_sync_test.go  predicates.go
pkg/job/: job.go
pkg/parser/: args.go  instruction.go  instruction_test.go  tx.go
relayer/src/: auth_interceptor.rs  client_packet_sender.rs  relayer.rs
server/: Cargo.toml
server/src/: geyser_grpc_plugin.rs  server.rs
src/: app.module.ts  app.service.ts  astralineClient.ts  bundleClient.ts  example.ts  grpcGeyserClient.ts  grpcRelayerClient.ts  index.ts  main.ts
src/auth/: auth.guard.ts  auth.service.ts
src/client/: astralineClient.ts  grpcBundleExchangeClient.ts  grpcGeyserClient.ts  grpcRelayerClient.ts  grpcStreamingServiceClient.ts
src/dynamic-graphql/: dynamic-graphql.controller.ts  dynamic-graphql.module.ts  dynamic-graphql.service.ts
src/grpc/: confirmed_block.ts  geyser.ts  packet.ts  streaming_service.ts
src/grpcBundleClient/: bundle.ts  bundle_exchange.ts  packet.ts  shared.ts
src/idl/: idl.service.ts
src/index/: index.controller.ts  index.module.ts  index.resolver.ts  index.service.ts
src/keys/: keys.controller.ts  keys.module.ts  keys.service.ts
src/mev/: mev.controller.ts  mev.module.ts  mev.service.ts
src/migrations/: 1719311310392-create_program_idl_table.ts  1719336889267-insert_program_idl.ts  1719571442356-insert_spl_name_service_idl.ts  1719572115926-insert_spl_token_idl.ts  1719572618074-insert_spl_token_lenging_idl.ts
src/proto/: geyser.proto  streaming_service.proto
src/tables/: tables.module.ts  tables.resolver.ts  tables.service.ts
streaming-server/: Cargo.toml
streaming-server/db/migrations/: 24053001_solana_instructions.sql  24053002_index_configuration.sql  24053005_program_idl.sql
streaming-server/src/: client.rs  main.rs  server.rs
streaming-server/src/idl/: idl.rs  mod.rs
streaming-server/src/index/: http_server.rs  middleware.rs  mod.rs  parser.rs
streaming-server/src/ldb/: mod.rs  solana_instructions.rs
substream-client/mev-sink/: README.md  solana-mev-substream-v1.0.1.spkg
substreams-rs/src/: substream_stream.rs  substreams.rs
theme/: theme.ts
transaction-relayer/src/: forwarder.rs  main.rs
ts/: index.ts
ts/src/: birdeye.client.ts  click_house.client.ts
types/: parsedType.ts
utils/: columns.ts  fetchSwaps.ts  fetchTokenMetaData.ts
(+425 files in other folders)
