[package]
name = "astraline-streaming-server"
description = "Streaming server entrypoint"
version = { workspace = true }
authors = { workspace = true }
homepage = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
publish = false

[dependencies]
sqlx = { workspace = true }
bincode = { workspace = true }
clap = { workspace = true }
jito-protos = { workspace = true }
solana-client = { workspace = true }
solana-program = { workspace = true }
solana-sdk = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tonic = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
base64 = { workspace = true }
prost = { workspace = true }
