[package]
name = "astraline-streaming-server"
description = "Streaming server entrypoint"
version = { workspace = true }
authors = { workspace = true }
homepage = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
publish = false

[[bin]]
name = "dummy"
path = "src/dummy.rs"

[dependencies]
sqlx = { workspace = true }
bincode = { workspace = true }
clap = { workspace = true }
jito-protos = { workspace = true }
solana-client = { workspace = true }
solana-program = { workspace = true }
solana-sdk = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tonic = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
base64 = { workspace = true }
prost = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
actix-web = { workspace = true }
uuid = { version = "1.3.0", features = ["v4"] }
