[workspace]
members = ["mev-sink", "substreams-rs"]

workspace.resolver = "2"

[workspace.dependencies]
#local dependencies
substreams-rs = { path = "substreams-rs" }

#crate dependencies
tokio = { version = "1.39.2", features = ["full"] }
tokio-stream = "0.1.15"
tokio-retry = "0.3.0"
async-stream = "0.3.5"
serde_json = { version = "1.0.122" }
serde = { version = "1.0.205", features = ["derive"] }
thiserror = { version = "1.0.63" }
anyhow = "1.0.86"
log = "0.4.22"
env_logger = "0.11.5"
bs58 = "0.5.1"
clap = "4.5.16"
futures-util = "0.3.30"
clickhouse = "0.12.2"
tracing = "0.1"
tracing-subscriber = "0.3"
reqwest = "0.12.0"

tonic = { version = "0.12", features = ["gzip", "tls-roots"] }
prost = "0.13"
prost-types = "0.13"
