[package]
name = "mev-sink"
version = "0.1.0"
edition = "2021"

[dependencies]
substreams-rs = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tokio-stream = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
clickhouse = { workspace = true, features = ["inserter"] }
serde = { workspace = true, features = ["derive"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true, features = ["derive"] }

[dev-dependencies]
clickhouse = { workspace = true, features = ["test-util", "native-tls"] }